--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ plugins {
 
 group 'com.severalcircles'
 version '0.1-SNAPSHOT'
-
 repositories {
     mavenCentral()
 }
@@ -23,6 +22,7 @@ publishing {
     publications {
         gpr(MavenPublication) {
             from(components.java)
+            artifactId: flaja
         }
     }
 }
